master: Control stock when sell product
